<resources>
    <string name="app_name">OMatKo!!!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_nav_schedule_theoretical">Wykłady teoretyczne</string>
    <string name="title_nav_schedule_popular_science">Wykłady popularnonaukowe</string>
    <string name="title_nav_assessment">Ocenianie referatów</string>
    <string name="title_nav_map">Mapa Wrocławia</string>
    <string name="title_nav_history">Poprzednie edycje</string>
    <string name="title_nav_sponsors">Nasi sponsorzy</string>
    <string name="title_nav_contact">Kontakt</string>
    <string name="title_ic_instagram">Instagram</string>
    <string name="title_ic_fb">Facebook</string>
    <string name="title_ic_snap">Snapchat</string>

    <string name="nav_header_desc">Oficjalne logo konferencji</string>

    <string name="action_exit">Opuść OMatKo!!!</string>
    <string name="description_confirm_quit">Czy na pewno chcesz zamknąć aplikację?</string>
    <string name="action_cancel">Nie</string>


    <string-array name="days_of_week">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>

    <string-array name="type_of_sponsors_group">
        <item>Sponsorzy</item>
        <item>Firmy wspierające</item>
        <item>Patronat honorowy</item>
        <item>Patroni medialni</item>
        <item>Organizatorzy</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">mail</string>
    <string name="has_o">hasło</string>
    <string name="zaloguj">zaloguj</string>
    <string name="user_icon">User icon</string>
    <string name="kod_wyk_adu">kod wykładu</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="edycja_2015">Edycja 2015</string>
    <string name="this_is_description_of_omatko_2015_edition_it_was_really_awesome_event_if_you_want_see_more_pictures_click_in_facebook_icon">This is description of OMatKo 2015 edition. It was really awesome event! If you want see more pictures click in facebook icon.</string>
    <string name="zdj_cie_z_edycji_omatko">Zdjęcie z edycji OMatKo</string>
    <string name="personContact_name">Imię Nazwisko</string>
    <string name="personContact_position">Stanowisko</string>
    <string name="personContact_phoneNumber">phone_number</string>
    <string name="personContact_number">tel.123-456-789</string>
    <string name="personContact_mail">e-mail: xxxxxxxxxxxx@xxx.pl</string>
    <string name="personContact_description">Jestem kimś ważnym na tej konferencji, możecie do mnie dzwonić zawsze i wszędzie!</string>
    <string name="personContact_img">Photo of contact person</string>

    <string-array name="address_book_tab_names">
        <item>OMatKo!!!</item>
        <item>Smacznego</item>
        <item>Warto zobaczyć</item>
        <item>Rozrywka</item>
        <item>Zakupy i dworce</item>
    </string-array>

</resources>
