<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule_theoretical"
            android:icon="@drawable/ic_theoretical_schedule"
            android:title="@string/title_nav_schedule_theoretical" />

        <item
            android:id="@+id/nav_schedule_popular_science"
            android:icon="@drawable/ic_popularscience_schedule"
            android:title="@string/title_nav_schedule_popular_science" />

        <item
            android:id="@+id/nav_assessment"
            android:icon="@drawable/ic_vote"
            android:title="@string/title_nav_assessment" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/title_nav_map" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_nav_history" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_sponsors"
            android:title="@string/title_nav_sponsors" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/title_nav_contact" />
    </group>

</menu>
