<?xml version="1.0" encoding="utf-8"?><!--TODO: remove mock data-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/background_contact_person"
    android:orientation="vertical"
    android:padding="2pt">

    <ImageView
        android:id="@+id/img_personcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/personContact_img"
        android:paddingTop="2pt"
        app:srcCompat="@drawable/ic_contact_person" />

    <TextView
        android:id="@+id/tv_personcontact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2pt"
        android:text="@string/personContact_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_personcontact_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:text="@string/personContact_position"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_personcontact_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_weight="1"
        android:contentDescription="@string/personContact_phoneNumber"
        android:text="@string/personContact_number"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_personcontact_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_weight="1"
        android:text="@string/personContact_mail"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_personcontact_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_weight="1"
        android:paddingBottom="3pt"
        android:text="@string/personContact_description"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>