<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_instagram"
        android:icon="@drawable/ic_instagram"
        android:orderInCategory="100"
        android:title="@string/title_ic_instagram"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_snap"
        android:icon="@drawable/ic_snap"
        android:orderInCategory="101"
        android:title="@string/title_ic_snap"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_fb"
        android:icon="@drawable/ic_fb"
        android:orderInCategory="102"
        android:title="@string/title_ic_fb"
        app:showAsAction="ifRoom" />
</menu>
